引入布局文件以及_ViewStart文件。

--- a/StudentManagement/StudentManagement/Views/Home/Details.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Details.cshtml
@@ -1,19 +1,25 @@
 ﻿@model StudentManagement.VIewModels.HomeDetailsViewModel
-@{ 
-    Layout = "~/Views/Shared/_Layout.cshtml";
+@{
+ 
+ 
     ViewBag.Title = "学生详情页";
 
-}    
-    <h3>@Model.PageTitle</h3>
+}
+<h3>@Model.PageTitle</h3>
 
-    <div>
-        姓名 : @Model.Student.Name
-    </div>
-    <div>
-        邮箱 : @Model.Student.Email
-    </div>
-    <div>
-        班级名称 : @Model.Student.ClassName
-    </div>
+<div>
+    姓名 : @Model.Student.Name
+</div>
+<div>
+    邮箱 : @Model.Student.Email
+</div>
+<div>
+    班级名称 : @Model.Student.ClassName
+</div>
 
+
+
+@section Scripts{
+    <script src="~/js/CustomScript.js"></script>
+}
 
