--- a/StudentManagement/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/StudentManagement/Views/Shared/_Layout.cshtml
@@ -4,9 +4,14 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+
+    <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet" />
+
+
 </head>
 <body>
-    <div>
+    <div class="container">
         @RenderBody()
     </div>
 
