--- a/StudentManagement/StudentManagement/Views/Home/Details.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Details.cshtml
@@ -5,17 +5,28 @@
     ViewBag.Title = "学生详情页";
 
 }
-<h3>@Model.PageTitle</h3>
+    <div class="row justify-content-center m-3">
+        <div class="col-sm-8">
+            <div class="card">
+                <div class="card-header">
+                    <h1>@Model.Student.Name</h1>
+                </div>
 
-<div>
-    姓名 : @Model.Student.Name
-</div>
-<div>
-    邮箱 : @Model.Student.Email
-</div>
-<div>
-    班级名称 : @Model.Student.ClassName
-</div>
+                <div class="card-body text-center">
+                    <img class="card-img-top" src="~/images/noimage.jpg" />
+
+                    <h4>学生ID : @Model.Student.Id</h4>
+                    <h4>邮箱 : @Model.Student.Email</h4>
+                    <h4>班级名称 : @Model.Student.ClassName</h4>
+                </div>
+                <div class="card-footer text-center">
+                    <a href="#" class="btn btn-primary">返回</a>
+                    <a href="#" class="btn btn-primary">编辑</a>
+                    <a href="#" class="btn btn-danger">删除</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
