--- a/StudentManagement/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Index.cshtml
@@ -1,38 +1,27 @@
 ﻿@model IEnumerable<Student>
 @{
-     
+
     ViewBag.Title = "学生列表页面";
 }
- 
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>名字</th>
-                <th>邮箱</th>
-                <th>班级名称</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var student in Model)
-            {
-                <tr>
-                    <td>
-                        @student.Id
-                    </td>
-                    <td>
-                        @student.Name
-                    </td>
-                    <td>
-                        @student.Email
-                    </td>
-                    <td>
-                        @student.ClassName
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
 
- 
+
+<div class="card-deck">
+    @foreach (var student in Model)
+    {
+        <div class="card m-3">
+            <div class="card-header">
+                <h3>@student.Name</h3>
+            </div>
+            <img class="card-img-top" src="~/images/timg.jpg" />
+            <div class="card-footer text-center">
+                <a href="#" class="btn btn-primary">查看</a>
+                <a href="#" class="btn btn-primary">编辑</a>
+                <a href="#" class="btn btn-danger">删除</a>
+            </div>
+        </div>
+    }
+</div>
+
+
+
