--- a/StudentManagement/StudentManagement/Views/Home/Details.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Details.cshtml
@@ -1,7 +1,6 @@
 ﻿@model HomeDetailsViewModel
 @{
  
- 
     ViewBag.Title = "学生详情页";
 
 }
@@ -13,7 +12,7 @@
                 </div>
 
                 <div class="card-body text-center">
-                    <img class="card-img-top" src="~/images/noimage.jpg" />
+                    <img class="card-img-top" src="~/images/timg.jpg" />
 
                     <h4>学生ID : @Model.Student.Id</h4>
                     <h4>邮箱 : @Model.Student.Email</h4>
