--- a/StudentManagement/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 
+ 
 
 <div class="card-deck">
     @foreach (var student in Model)
@@ -13,9 +14,13 @@
             <div class="card-header">
                 <h3>@student.Name</h3>
             </div>
-            <img class="card-img-top" src="~/images/timg.jpg" />
-            <div class="card-footer text-center">
-                <a href="#" class="btn btn-primary">查看</a>
+
+            <img class="card-img-top" src="~/images/timg.jpg" asp-append-version="true" />
+            <div class="card-footer text-center">                
+               
+               <a asp-controller="home" asp-action="details" asp-route-id="@student.Id" class="btn btn-primary">查看</a>    
+                
+           
                 <a href="#" class="btn btn-primary">编辑</a>
                 <a href="#" class="btn btn-danger">删除</a>
             </div>
