--- a/StudentManagement/StudentManagement/Views/Home/Details.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Details.cshtml
@@ -19,7 +19,7 @@
                     <h4>班级名称 : @Model.Student.ClassName</h4>
                 </div>
                 <div class="card-footer text-center">
-                    <a href="#" class="btn btn-primary">返回</a>
+                    <a  asp-action="Index" asp-controller="home" class="btn btn-primary">返回</a>
                     <a href="#" class="btn btn-primary">编辑</a>
                     <a href="#" class="btn btn-danger">删除</a>
                 </div>
