--- a/StudentManagement/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Index.cshtml
@@ -18,11 +18,11 @@
             <img class="card-img-top" src="~/images/timg.jpg" asp-append-version="true" />
             <div class="card-footer text-center">                
                
-               <a asp-controller="home" asp-action="details" asp-route-id="@student.Id" class="btn btn-primary">查看</a>    
+               <a asp-controller="home" asp-action="details" asp-route-id="@student.Id" class="btn btn-primary m-1">查看</a>    
                 
            
-                <a href="#" class="btn btn-primary">编辑</a>
-                <a href="#" class="btn btn-danger">删除</a>
+                <a href="#" class="btn btn-primary m-1">编辑</a>
+                <a href="#" class="btn btn-danger m-1" >删除</a>
             </div>
         </div>
     }
