--- a/StudentManagement/StudentManagement/Views/Home/Create.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Create.cshtml
@@ -1,20 +1,47 @@
 ﻿@model Student
-@inject IStudentRepository stuRepository
 
- 
-<form asp-controller="home" asp-action="create" method="post">
-    <div>
-        <label asp-for="Name"></label>
-        <div>
-            <input asp-for="Name">
+@{
+    ViewBag.Title = "创建学生信息";
+}
+
+<form asp-controller="home" asp-action="create" method="post" class="mt-3">
+    <div asp-validation-summary="All" class="text-danger"></div>
+
+
+    <div class="form-group row">
+        <label asp-for="Name" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <input asp-for="Name" class="form-control" placeholder="请输入名字" />
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
     </div>
 
-    <div>
-        <button type="submit">创建</button>
+    <div class="form-group row">
+        <label asp-for="Email" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <input asp-for="Email" class="form-control" placeholder="请输入邮箱地址">
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
     </div>
 
-    <div>
-        Total Employees Count = @stuRepository.GetAllStudents().Count().ToString()
+
+    <div class="form-group row">
+        <label asp-for="ClassName" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <select asp-for="ClassName" class="custom-select mr-sm-2"
+                    asp-items="Html.GetEnumSelectList<ClassNameEnum>()">
+                <option value=""> 请选择</option>
+            </select>
+            <span asp-validation-for="ClassName" class="text-danger"></span>
+        </div>
+    </div>
+
+
+
+
+    <div class="form-group row">
+        <div class="col-sm-10">
+            <button type="submit" class="btn btn-primary">创建</button>
+        </div>
     </div>
 </form>
