--- a/StudentManagement/StudentManagement/Views/Home/Create.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Create.cshtml
@@ -1,13 +1,14 @@
 ﻿@model Student
+@inject IStudentRepository _studentRepository
 
 @{
     ViewBag.Title = "创建学生信息";
 }
 
     <form asp-controller="home" asp-action="create" method="post" class="mt-3">
-       
+
         <div asp-validation-summary="All" class="text-danger"></div>
-        
+
         <div class="form-group row">
             <label asp-for="Name" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
@@ -38,6 +39,11 @@
         <div class="form-group row">
             <div class="col-sm-10">
                 <button type="submit" class="btn btn-primary">创建</button>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-sm-10">
+               学生信息总人数= @_studentRepository.GetAllStudents().Count().ToString()
             </div>
         </div>
     </form>
