--- a/src/new/StudentManage/Views/Home/Details.cshtml
+++ b/src/new/StudentManage/Views/Home/Details.cshtml
@@ -2,7 +2,7 @@
 @{
  
     ViewBag.Title = "学生详情页";
-
+ var photoPath = "~/images/" + (Model.Student.PhotoPath ?? "noimage.jpg");
 }
     <div class="row justify-content-center m-3">
         <div class="col-sm-8">
@@ -12,7 +12,7 @@
                 </div>
 
                 <div class="card-body text-center">
-                    <img class="card-img-top" src="~/images/timg.jpg" />
+                    <img class="card-img-top" src="@photoPath" asp-append-version="true" />
 
                     <h4>学生ID : @Model.Student.Id</h4>
                     <h4>邮箱 : @Model.Student.Email</h4>
