完善上传内容。

--- a/src/new/StudentManage/Views/Home/Create.cshtml
+++ b/src/new/StudentManage/Views/Home/Create.cshtml
@@ -50,7 +50,7 @@ text/plain	空格转换为 "+" 加号，但不对特殊字符编码。
             <div class="col-sm-10">
                 <div class="custom-file">
                     <input asp-for="Photo" class="form-control custom-file-input">
-                    <label class="custom-file-label">请选择...</label>
+                    <label class="custom-file-label">请选择照片...</label>
                 </div>
             </div>
         </div>
