--- a/src/new/StudentManage/Views/Home/Create.cshtml
+++ b/src/new/StudentManage/Views/Home/Create.cshtml
@@ -44,12 +44,15 @@ text/plain	空格转换为 "+" 加号，但不对特殊字符编码。
         “Photo”属性类型是IFormFile，
         所以在运行的时候ASP.NET Core会将该标签生成上传控件(input type=file)
         *@
+        
+       
+
 
         <div class="form-group row">
-            <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
+            <label asp-for="Photos" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
                 <div class="custom-file">
-                    <input asp-for="Photo" class="form-control custom-file-input">
+                    <input asp-for="Photos"   class="form-control custom-file-input">
                     <label class="custom-file-label">请选择照片...</label>
                 </div>
             </div>
@@ -61,14 +64,22 @@ text/plain	空格转换为 "+" 加号，但不对特殊字符编码。
                 <button type="submit" class="btn btn-primary">创建</button>
             </div>
         </div>
-        @*以下JavaScript代码的作用是，可以在上传标签中显示选定的上传文件名称。*@
+        @*以下JavaScript代码是必须的，它的作用是
+            - 如果选择了单个文件，则显示该文件的名称。
+            - 如果多个选择文件，然后显示文件数量。*@
 
         @section Scripts {
             <script>
                 $(document).ready(function () {
                     $('.custom-file-input').on("change", function () {
-                        var fileName = $(this).val().split("\\").pop();
-                        $(this).next('.custom-file-label').html(fileName);
+                        var fileLabel = $(this).next('.custom-file-label');
+                        var files = $(this)[0].files;
+                        if (files.length > 1) {
+                            fileLabel.html('您已经选择了：'+files.length + ' 个文件');
+                        }
+                        else if (files.length == 1) {
+                            fileLabel.html(files[0].name);
+                        }
                     });
                 });
             </script>
