--- a/src/new/StudentManage/Views/Home/Index.cshtml
+++ b/src/new/StudentManage/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="card-deck">
     @foreach (var student in Model)
     {
-        var photoPath = "~/images/" + (student.PhotoPath ?? "noimage.jpg");
+        var photoPath = "~/images/" + (student.PhotoPath ?? "noimage.png");
 
     <div class="card m-3">
         <div class="card-header">
@@ -21,7 +21,7 @@
             <a asp-controller="home" asp-action="details" asp-route-id="@student.Id" class="btn btn-primary m-1">查看</a>
 
 
-            <a href="#" class="btn btn-primary m-1">编辑</a>
+            <a asp-controller="home" asp-action="edit" asp-route-id="@student.Id" class="btn btn-primary m-1">编辑</a>
             <a href="#" class="btn btn-danger m-1">删除</a>
         </div>
     </div>
