完成单图片的上传。

--- a/StudentManagement/StudentManagement/Views/Home/Details.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model HomeDetailsViewModel
 @{
- 
+
     ViewBag.Title = "学生详情页";
+    var photoPath = "~/images/" + (Model.Student.PhotoPath??"noimage.png");
 
 }
     <div class="row justify-content-center m-3">
@@ -12,7 +13,7 @@
                 </div>
 
                 <div class="card-body text-center">
-                    <img class="card-img-top" src="~/images/timg.jpg" />
+                    <img class="card-img-top" src="@photoPath" asp-append-version="true" />
 
                     <h4>学生ID : @Model.Student.Id</h4>
                     <h4>邮箱 : @Model.Student.Email</h4>
