--- a/StudentManagement/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
 @{
 
     ViewBag.Title = "学生列表页面";
+       
+
 }
 
 
@@ -10,12 +12,13 @@
 <div class="card-deck">
     @foreach (var student in Model)
     {
+         var photoPath = "~/images/" + (student.PhotoPath??"noimage.png");
         <div class="card m-3">
             <div class="card-header">
                 <h3>@student.Name</h3>
             </div>
 
-            <img class="card-img-top" src="~/images/timg.jpg" asp-append-version="true" />
+            <img class="card-img-top imagesThumbnail" src="@photoPath" asp-append-version="true" />
             <div class="card-footer text-center">                
                
                <a asp-controller="home" asp-action="details" asp-route-id="@student.Id" class="btn btn-primary m-1">查看</a>    
