--- a/StudentManagement/StudentManagement/Views/Home/Create.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Create.cshtml
@@ -1,11 +1,11 @@
-﻿@model Student
+﻿@model StudentCreateViewModel
 @inject IStudentRepository _studentRepository
 
 @{
     ViewBag.Title = "创建学生信息";
 }
 
-    <form asp-controller="home" asp-action="create" method="post" class="mt-3">
+    <form enctype="multipart/form-data" asp-controller="home" asp-action="create" method="post" class="mt-3">
 
         <div asp-validation-summary="All" class="text-danger"></div>
 
@@ -36,6 +36,18 @@
             </div>
         </div>
 
+
+        <div class="form-group row">
+            <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-10">
+                <div class="custom-file">
+                    <input asp-for="Photo" class="form-control custom-file-input">                  
+                    <label class="custom-file-label">请选择照片....</label>
+                </div>              
+            </div>
+        </div>
+
+
         <div class="form-group row">
             <div class="col-sm-10">
                 <button type="submit" class="btn btn-primary">创建</button>
@@ -43,7 +55,37 @@
         </div>
         <div class="form-group row">
             <div class="col-sm-10">
-               学生信息总人数= @_studentRepository.GetAllStudents().Count().ToString()
+                学生信息总人数= @_studentRepository.GetAllStudents().Count().ToString()
             </div>
         </div>
+
+
+ @section Scripts{ 
+
+        <script type="text/javascript">
+            $(document).ready(function () {
+
+                $('.custom-file-input').on("change", function () {                 
+                  
+                   // console.log($(this).val());
+                    var fileName = $(this).val().split("\\").pop();
+                    $(this).next(".custom-file-label").html(fileName);
+
+                });
+
+
+            }      
+            
+            
+            );
+            
+
+
+
+        </script>
+      
+
+        }
+
+
     </form>
