--- a/StudentManagement/StudentManagement/Views/Home/Create.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Create.cshtml
@@ -38,10 +38,10 @@
 
 
         <div class="form-group row">
-            <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
+            <label asp-for="Photos" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-10">
                 <div class="custom-file">
-                    <input asp-for="Photo" class="form-control custom-file-input">                  
+                    <input asp-for="Photos" multiple class="form-control custom-file-input">                  
                     <label class="custom-file-label">请选择照片....</label>
                 </div>              
             </div>
@@ -67,17 +67,29 @@
 
                 $('.custom-file-input').on("change", function () {                 
                   
-                   // console.log($(this).val());
-                    var fileName = $(this).val().split("\\").pop();
-                    $(this).next(".custom-file-label").html(fileName);
+                   console.log($(this));
+                    //var fileName = $(this).val().split("\\").pop();
+                    //$(this).next(".custom-file-label").html(fileName);
+
+
+                    var fileLabel = $(this).next(".custom-file-label");
+
+                    var files = $(this)[0].files;
+
+                    if (files.length > 1) {
+
+                        fileLabel.html("您已经选择了" + files.length +"个文件");
+                    } else {
+                        fileLabel.html(files[0].name);
+                    }
+
+
+
 
                 });
 
 
-            }      
-            
-            
-            );
+            }      );
             
 
 
