--- a/StudentManagement/StudentManagement/Views/Home/Index.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Index.cshtml
@@ -21,10 +21,11 @@
             <img class="card-img-top imagesThumbnail" src="@photoPath" asp-append-version="true" />
             <div class="card-footer text-center">                
                
-               <a asp-controller="home" asp-action="details" asp-route-id="@student.Id" class="btn btn-primary m-1">查看</a>    
-                
+               <a asp-controller="home" asp-action="details" asp-route-id="@student.Id" class="btn btn-primary m-1">查看</a>
            
-                <a href="#" class="btn btn-primary m-1">编辑</a>
+                <a  asp-controller="home" asp-action="edit" asp-route-id="@student.Id"  class="btn btn-primary m-1">编辑</a>
+
+
                 <a href="#" class="btn btn-danger m-1" >删除</a>
             </div>
         </div>
