完成日志过滤等级的内容。

--- a/StudentManagement/StudentManagement/Views/Home/Details.cshtml
+++ b/StudentManagement/StudentManagement/Views/Home/Details.cshtml
@@ -31,6 +31,6 @@
 
 
 @section Scripts{
-    <script src="~/js/CustomScript.js"></script>
+    @*<script src="~/js/CustomScript.js"></script>*@
 }
 
