--- a/src/new/StudentManage/Views/Account/Login.cshtml
+++ b/src/new/StudentManage/Views/Account/Login.cshtml
@@ -1,11 +1,7 @@
 ﻿@model LoginViewModel
-
-@{
-    ViewBag.Title = "用户登录";
+@{    ViewBag.Title = "用户登录";
 }
-
 <h1>用户登录</h1>
-
 <div class="row">
     <div class="col-md-12">
         <form method="post">
