--- a/src/new/StudentManage/Views/Shared/_Layout.cshtml
+++ b/src/new/StudentManage/Views/Shared/_Layout.cshtml
@@ -40,18 +40,15 @@
 
  @using Microsoft.AspNetCore.Identity
  @inject SignInManager<IdentityUser> SignInManager
-
             <div id="collapsibleNavbar" class="collapse navbar-collapse">
                 <ul class="navbar-nav">
-
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="home" asp-action="Index">学生列表</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="home" asp-action="Create">添加学生</a>
-
                     </li>
-                </ul>
+                </ul> 
                 <ul class="navbar-nav ml-auto">
                     @*如果用户已登录，则显示注销链接*@
                     @if (SignInManager.IsSignedIn(User))
@@ -66,8 +63,7 @@
                         </li>
                     }
                     else
-                    {
-                        <li class="nav-item">
+                    {          <li class="nav-item">
                             <a class="nav-link" asp-controller="account" asp-action="register">
                                 注册
                             </a>
@@ -76,10 +72,8 @@
                             <a class="nav-link" asp-controller="account" asp-action="login">
                                 登录
                             </a>
-                        </li>
-                    }
+                        </li>                    }
                 </ul>
-
             </div>
 
 
