--- a/StudentManagement/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/StudentManagement/Views/Shared/_Layout.cshtml
@@ -52,6 +52,11 @@
                     </li>
                 </ul>
 
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link"asp-controller="account" asp-action="Register" > 注册</a>
+                    </li>
+                </ul>
 
             </div>
 
