在 ASP.NET Core 中扩展 IdentityUser

--- a/src/new/StudentManage/Views/Shared/_Layout.cshtml
+++ b/src/new/StudentManage/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
             </button>
 
             @using Microsoft.AspNetCore.Identity
-            @inject SignInManager<IdentityUser> SignInManager
+            @inject SignInManager<ApplicationUser> SignInManager
             <div id="collapsibleNavbar" class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
