--- a/src/new/StudentManage/Views/Account/Register.cshtml
+++ b/src/new/StudentManage/Views/Account/Register.cshtml
@@ -25,6 +25,12 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="City"></label>
+                <input asp-for="City" class="form-control" />
+            </div>
+
             <button type="submit" class="btn btn-primary">注册</button>
         </form>
     </div>
