--- a/src/new/StudentManage/Views/_ViewImports.cshtml
+++ b/src/new/StudentManage/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using StudentManagement.Models;
 @using StudentManagement.ViewModels;
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
