ASP.Net Core 中的用户角色显示或隐藏导航菜单

--- a/src/new/StudentManage/Views/Shared/_Layout.cshtml
+++ b/src/new/StudentManage/Views/Shared/_Layout.cshtml
@@ -48,6 +48,15 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="home" asp-action="Create">添加学生</a>
                     </li>
+
+                    @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Admin" asp-action="ListRoles">
+                                角色管理
+                            </a>
+                        </li>
+                    }
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     @*如果用户已登录，则显示注销链接*@
