Delete identity role in asp.net core

--- a/src/new/StudentManage/Views/Admin/ListRoles.cshtml
+++ b/src/new/StudentManage/Views/Admin/ListRoles.cshtml
@@ -1,4 +1,4 @@
-﻿ @model IEnumerable<IdentityRole>
+﻿@model IEnumerable<IdentityRole>
 
 @{
     ViewBag.Title = "角色列表";
@@ -21,11 +21,27 @@
                 <h5 class="card-title">@role.Name</h5>
             </div>
             <div class="card-footer">
-                <a asp-controller="Admin" asp-action="EditRole"
-                   asp-route-id="@role.Id" class="btn btn-primary">
-                    编辑
-                </a>
-                <a href="#" class="btn btn-danger">删除</a>
+
+                <form method="post" asp-action="DeleteUser" asp-route-id="@role.Id">
+                    <a asp-controller="Admin" asp-action="EditRole"
+                       asp-route-id="@role.Id" class="btn btn-primary">
+                        编辑
+                    </a>
+
+                    <span id="confirmDeleteSpan_@role.Id" style="display:none">
+                        <span>你确定你要删除?</span>
+                        <button type="submit" class="btn btn-danger">是</button>
+                        <a href="#" class="btn btn-primary"
+                           onclick="confirmDelete('@role.Id', false)">否</a>
+                    </span>
+
+                    <span id="deleteSpan_@role.Id">
+                        <a href="#" class="btn btn-danger"
+                           onclick="confirmDelete('@role.Id', true)">删除</a>
+                    </span>
+                </form>
+
+
             </div>
         </div>
     }
@@ -46,4 +62,9 @@ else
             </a>
         </div>
     </div>
+}
+
+
+@section Scripts {
+    <script src="~/js/CustomScript.js"></script>
 }
