--- a/StudentManagement/StudentManagement/Views/Account/Register.cshtml
+++ b/StudentManagement/StudentManagement/Views/Account/Register.cshtml
@@ -23,13 +23,19 @@
                 <label asp-for="Password"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
-            </div>   <div class="form-group">
+            </div>
+            <div class="form-group">
                 <label asp-for="ConfirmPassword"></label>
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
 
-                     <button type="submit" class="btn btn-primary">注册</button>
+            <div class="form-group">
+                <label asp-for="City"></label>
+                <input asp-for="City" class="form-control" />
+               
+            </div>
+            <button type="submit" class="btn btn-primary">注册</button>
 
 
         </form>
