--- a/StudentManagement/StudentManagement/Views/_ViewImports.cshtml
+++ b/StudentManagement/StudentManagement/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using StudentManagement.Models;
 @using StudentManagement.ViewModels;
+@using Microsoft.AspNetCore.Identity;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
