完成第83章内容。

--- a/StudentManagement/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/StudentManagement/Views/Shared/_Layout.cshtml
@@ -49,8 +49,17 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="home" asp-action="Create">添加学生</a>
-
                     </li>
+
+                    @if (SignInManager.IsSignedIn(User)&&User.IsInRole("Admin"))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Admin" asp-action="ListRoles">角色管理</a>
+                        </li>
+
+                    }
+
+
                 </ul>
 
                 <ul class="navbar-nav ml-auto">
