完成功能到88章。

--- a/src/new/StudentManage/Views/Admin/ListRoles.cshtml
+++ b/src/new/StudentManage/Views/Admin/ListRoles.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="card-footer">
 
-                <form method="post" asp-action="DeleteUser" asp-route-id="@role.Id">
+                <form method="post" asp-action="DeleteRole" asp-route-id="@role.Id">
                     <a asp-controller="Admin" asp-action="EditRole"
                        asp-route-id="@role.Id" class="btn btn-primary">
                         编辑
