ASP.NET Core中的自定义错误页面 try catch 的使用。

--- a/src/new/StudentManage/Views/Shared/_Layout.cshtml
+++ b/src/new/StudentManage/Views/Shared/_Layout.cshtml
@@ -109,8 +109,8 @@
 
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/jquery-validate/jquery.validate.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js">
-        <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="~/lib/twitter-bootstrap/js/bootstrap.js"></script>
 
 
