在asp.net core identiy 中管理用户角色

--- a/src/new/StudentManage/Views/Admin/EditUser.cshtml
+++ b/src/new/StudentManage/Views/Admin/EditUser.cshtml
@@ -61,7 +61,7 @@
             }
         </div>
         <div class="card-footer">
-            <a href="#" style="width:auto" class="btn btn-primary">
+            <a asp-action="ManageUserRoles" asp-route-userId="@Model.Id"  class="btn btn-primary">
                 管理角色
             </a>
         </div>
