模型绑定无法使用foreach循环提交razor视图

--- a/src/new/StudentManage/Views/Admin/ManageUserRoles.cshtml
+++ b/src/new/StudentManage/Views/Admin/ManageUserRoles.cshtml
@@ -22,6 +22,7 @@
                     </label>
                 </div>
             }
+            @*//不要使用foreach*@
             <div asp-validation-summary="All" class="text-danger"></div>
         </div>
         <div class="card-footer">
