93,完成管理用户声明

--- a/src/new/StudentManage/Views/Admin/EditUser.cshtml
+++ b/src/new/StudentManage/Views/Admin/EditUser.cshtml
@@ -85,7 +85,7 @@
             }
         </div>
         <div class="card-footer">
-            <a href="#" style="width:auto" class="btn btn-primary">
+            <a asp-action="ManageUserClaims" asp-route-userId="@Model.Id" style="width:auto" class="btn btn-primary">
                 管理声明
             </a>
         </div>
