--- a/src/new/StudentManage/Views/_ViewImports.cshtml
+++ b/src/new/StudentManage/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using StudentManagement.Models;
 @using StudentManagement.ViewModels;
 @using Microsoft.AspNetCore.Identity;
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService authorizationService
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
