完成用户删除功能。

--- a/StudentManagement/StudentManagement/Views/Admin/EditUser.cshtml
+++ b/StudentManagement/StudentManagement/Views/Admin/EditUser.cshtml
@@ -48,7 +48,7 @@
 
                 <button type="submit" class="btn btn-primary">更新</button>
 
-                <a class="btn btn-primary" asp-action="ListRoles">取消</a>
+                <a class="btn btn-primary" asp-action="ListUsers">取消</a>
 
 
             </div>
@@ -87,7 +87,7 @@
         </div>
 
 
-        <div class=" card mt-3">
+        <div class="card mt-3">
             <div class="card-header">
                 <h3>用户声明</h3>
             </div>
