--- a/StudentManagement/StudentManagement/Views/Shared/_Layout.cshtml
+++ b/StudentManagement/StudentManagement/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js" asp-append-version="true"></script>
     <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="~/lib/twitter-bootstrap/js/bootstrap.js" asp-append-version="true"></script>
-
+    @*<script src="~/js/CustomerScript.js"></script>*@
     @RenderSection("Scripts", required: false)
 
 </body>
