禁止EF强制删除。

--- a/StudentManagement/StudentManagement/Views/Admin/ListRoles.cshtml
+++ b/StudentManagement/StudentManagement/Views/Admin/ListRoles.cshtml
@@ -22,9 +22,19 @@
 
     </div>
     <div class="card-footer">
+        <form method="post" asp-action="DeleteRole" asp-route-id="@role.Id">
+            <a asp-controller="Admin" asp-action="EditRole" asp-route-id="@role.Id" class="btn btn-primary">编辑</a>
 
-        <a asp-controller="Admin" asp-action="EditRole" asp-route-id="@role.Id" class="btn btn-primary">编辑</a>
-        <a href="#" class="btn btn-danger">删除</a>
+            <span id="confirmDeleteSpan_@role.Id" style="display:none">
+                <span>你确定你要删除？</span>
+                <button type="submit" class="btn btn-danger">是</button>
+                <a href="#" class="btn btn-primary" onclick="confirmDelete('@role.Id', false)">否</a>
+            </span>
+            <span id="deleteSpan_@role.Id">
+                <a href="#" class="btn btn-danger" onclick="confirmDelete('@role.Id', true)">删除</a>
+            </span>
+        </form>
+        
 
 
     </div>
@@ -59,3 +69,8 @@
 
 
      }
+
+
+@section Scripts{ 
+    <script src="~/js/CustomerScript.js" asp-append-version="true"></script>
+}
