补充缺失的功能模块。内容。

--- a/StudentManagement/StudentManagement/Views/_ViewImports.cshtml
+++ b/StudentManagement/StudentManagement/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
-﻿@using StudentManagement.Models;
+@using StudentManagement.Models;
 @using StudentManagement.ViewModels;
 @using Microsoft.AspNetCore.Identity;
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
