处理权限与策略问题。

--- a/StudentManagement/StudentManagement/Views/Admin/ListRoles.cshtml
+++ b/StudentManagement/StudentManagement/Views/Admin/ListRoles.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<IdentityRole>
+@model IEnumerable<IdentityRole>
 
 @{ 
     ViewBag.Title = "角色列表";
@@ -21,9 +21,25 @@
         <h5 class="card-title">@role.Name</h5>
 
     </div>
+
+
+    @using Microsoft.AspNetCore.Authorization
+
+    @inject IAuthorizationService authorizationService;
+
+
+
+
     <div class="card-footer">
         <form method="post" asp-action="DeleteRole" asp-route-id="@role.Id">
+
+            @*@if ((await authorizationService.AuthorizeAsync(User, "EditRolePolicy")).Succeeded)
+            {
+                <a asp-controller="Admin" asp-action="EditRole" asp-route-id="@role.Id" class="btn btn-primary">编辑</a>
+
+            }*@
             <a asp-controller="Admin" asp-action="EditRole" asp-route-id="@role.Id" class="btn btn-primary">编辑</a>
+
 
             <span id="confirmDeleteSpan_@role.Id" style="display:none">
                 <span>你确定你要删除？</span>
